Image map fixes. Resize and z-index.
* Fixed imagemap not resizing when then comments section expanded / mininmised. This was causing an issue with user being able to place comment pins off the edges of the image itself. Sometime over important buttons, this would also render to given buttons usable. The imagemap now resizes when the transition of the comments side bar is complete.
* Clicking select reviewers will now scroll the page to the review title section and then open up the modal to select the reviewers. This has been done because of z-index issues related to the pinned comments. When the z-indexes were fixed so that the modal was above the body content, the image map was still at a higher z value, when this was lowered to be behind the modal the imagemap became usable for it's feature.

*

--- a/Inspicio/wwwroot/css/review_information.css
+++ b/Inspicio/wwwroot/css/review_information.css
@@ -70,7 +70,7 @@
 .add-reviewees-modal-content {
     max-height: 355px;
     background-color: #fefefe;
-    margin: 22% 0% 0% 45%;
+    margin: 7% 0% 0% 45%;
     padding-left: 20px;
     padding-right: 20px;
     border: 1px solid #888;
