--- a/Inspicio/wwwroot/css/site.css
+++ b/Inspicio/wwwroot/css/site.css
@@ -743,7 +743,8 @@ select#comment-date {
 .image-controls {
     position: fixed;
     right: 0;
-    margin-top: 35%;
+    margin-bottom: 1%;
+    bottom: 0
 }
 
 
@@ -753,7 +754,7 @@ select#comment-date {
     position: fixed;
     width: 12%;
     margin-right: 1.8%;
-    margin-top: 4%;
+    top: 9.5%;
 }
 
 #reviewees-section {
@@ -785,9 +786,9 @@ transition: all 0.3s linear;
 -webkit-transition: all 0.3s linear;
 }
 
-.view-container.wide .img-wrapper {
-    width: 100%;
-}
+    .view-container.wide .img-wrapper {
+        width: 100%;
+    }
 
 .view-container {
     width: 85%;
